--- a/views/account.pug
+++ b/views/account.pug
@@ -41,9 +41,10 @@ block content
               th Amount
           tbody
             for block in account.blocks
+              - block = block.filter((e) => e.transactionHash)
               for trace in block
-                tr            
-                  td 
+                tr
+                  td
                     a(href="/tx/" + trace.transactionHash)  #{(trace.transactionHash || 'NONE').substr(0, 10)}...
                   td
                     a(href="/block/" + trace.blockNumber) #{trace.blockNumber}
@@ -59,7 +60,7 @@ block content
                         span.glyphicon.glyphicon-import(style="color: green;")
                     td
                       a(href="/account/" + trace.action.from) #{nameformatter.format(trace.action.from)}
-                    td 
+                    td
                       a(href="/account/" + trace.action.to) #{nameformatter.format(trace.action.to)}
                     td #{ethformatter(trace.action.value)}
                   else if trace.type === "create"
@@ -84,7 +85,7 @@ block content
                     td
                       a(href="/account/" + trace.action.refundAddress) #{nameformatter.format(trace.action.refundAddress)}
                     td #{ethformatter(trace.action.balance)}
-      
+
       if account.isContract
         #code.tab-pane(role='tabpanel')
           h3 Code
